# realtime-image-processing

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  SETUP.md  work-obj93.cf
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
Vivado/: .gitignore  Vivado_init.tcl  hw.tcl
docs/: references.md  style_guide.md  vivado_git_workflow.md  window_gen.md
docs/figures/: arch.mmd
rtl/: README.md  button_detection.vhd  click_detection.vhd  debouncing.vhd  example_passthrough.vhd
rtl/CLICK_DETECTOR/: click_detection.vhd
rtl/DEBOUNCER/: debouncing.vhd
rtl/RGB_TO_GRAYSCALE/: component.xml
scripts/: sim.sh  sim_button_detection.sh  sim_debouncer.sh
src/: and_gate.vhd  button_detection.vhd  debouncing.vhd
tb/: tb_and_gate.vhd  tb_button_detection.vhd  tb_debouncing.vhd
testbench/: Makefile  README.md  pyproject.toml  targets.toml
testbench/common/: __init__.py  backpressure.py  pause.py  reset.py
testbench/drivers/: __init__.py  axi_stream_driver.py  axis_lowpass_filter_driver.py  axis_video_source.py
testbench/models/: image_model.py
testbench/monitors/: __init__.py  axi_stream_monitor.py  axis_lowpass_monitor.py  axis_video_sink.py
testbench/sim/: __init__.py  run.py
testbench/tests/: test_axi_rgb_to_grayscale.py  test_click_detection.py  test_debouncing.py  test_example.py  test_lowpass_filter.py  test_passthrough.py
testbench/verification/: lowpass_scoreboard.py  scoreboard.py
vivado/: .gitignore  README.md  archive_project_summary.txt  hw.tcl
vivado/migration/: README.md  system.bd
vivado/tcl/: checkout.tcl  (+3 more)
(+76 files in other folders)
