[project]
name = "testbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cocotb>=2.0.1",
    "cocotbext-axi>=0.1.26",
    "numpy>=2.2.2",
    "opencv-python>=4.13.0.92",
    "pillow>=11.1.0",
    "pytest>=9.0.2",
]
