[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testbench"
version = "0.1.0"
description = "Cocotb verification environment for AXI4-Video FPGA blocks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cocotb>=2.0.1",
    "cocotbext-axi>=0.1.26",
    "numpy>=2.2.2",

    "pillow>=11.1.0",
    "pytest>=9.0.2",
]

[project.scripts]
    tb-sim = "sim.run:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = [
    "sim*",
    "common*",
    "drivers*",
    "models*",
    "monitors*",
    "stimuli*",
    "verification*",
    "tests*",
]
exclude = ["sim_build*", "images*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
